feat(cassandra): build the runtime image with Bazel (rules_oci)
Give the custom Apache-Cassandra runtime image (infra/cassandra) a Bazel
rules_oci build so it releases through the same flow as every other NVCF image
instead of a Dockerfile/buildah one-off.

- infra/cassandra: nested Bazel module. oci.pull cassandra:5.0.8 (multi-arch, by
  digest), layer in a checksummed yq (public http_file) and the rack-aware
  cassandra-env.sh, set the exporter JVM --add-opens, expose 9500. Multi-arch
  image_index (amd64 + arm64) builds green; a yq exec-bit test guards the layer.
- Public target ships NO exporter agent (OSS-safe). The Prometheus exporter
  layer and the ncp-dev push live in the OSS-excluded infra/cassandra/nvidia-internal
  overlay, via the shared //rules/oci-destinations macro.
- rules_python toolchain sets ignore_root_user_error (rules_pkg needs it under
  the root CI container). Matrix row + .bazelignore wired.

Follow-up: the internal (with-metrics) release variant needs the exporter agent
jar's URL + sha256 (placeholder in rules/repos.bzl); the Dockerfile stays until
the release cuts over.

Co-authored-by: Balaji Ganesan <bganesan@nvidia.com>
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>